# K3SExplorer

./: .gitignore  LICENSE  README.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DeploymentCard.tsx  LogDock.tsx  ResourceEditorModal.tsx  SettingsModal.tsx  YamlViewerModal.tsx
frontend/src/hooks/: useEvents.ts  useTheme.ts
