[project]
name = "kexplorer-backend"
version = "0.1.0"
description = "KExplorer backend — FastAPI service that proxies the Kubernetes API for the KExplorer dashboard."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "kubernetes>=35.0.0",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
